--- a/styles/main.css
+++ b/styles/main.css
@@ -1,16 +1,29 @@
 h1{
   font-size: 21px;
-  text-decoration: underline;
   font-family: "Roboto", sans-serif;
   text-align: center;
-  margin-bottom: 3rem;
   color: black;
 }
 #logo{
   align-items: center;
   width:10%;
-  margin-left: 27rem;
   margin-top: 3rem;
+}
+body {
+  text-align: center; 
+}
+#description{
+  border-bottom: 1.2px solid rgb(94, 93, 93);
+  border-top: 1.2px solid rgb(94, 93, 93);
+  align-items: center;
+  display: inline-block;
+  padding: 5px;
+  margin-bottom: 3rem;
+  line-height: 1.5;
+  color: rgb(94, 93, 93);
+}
+.bold{
+  font-weight: 600;
 }
 .image{
   width:80%;
